Changed entropy_plot_input_variables.py module so that we have two functions now. One to do the configuration stuff, the other to get the probability distributions dictionary. Other modules were changed accordingly.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "create_entropy_plots.py",
             "console": "integratedTerminal",
-            "args": ["-config", "original_config.json"]
+            "args": ["-config_path", "original_config.json"]
         }
     ]
 }
